--- a/public/index.html
+++ b/public/index.html
@@ -3,12 +3,58 @@
   <head>
     <meta charset='utf-8'>
     <meta name='viewport' content='width=device-width initial-scale=1.0'>
-    <title>Boilermaker</title>
+    <title>Habit Warden</title>
+    <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700%7CRoboto%7CJosefin+Sans:100,300,400,500" rel="stylesheet" type="text/css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"/>
     <link rel="stylesheet" href="/style.css" />
+    <script src="https://unpkg.com/scrollreveal"></script>
     <script defer src="/bundle.js"></script>
   </head>
   <body>
     <div id="app"></div>
+    <script
+  src="https://code.jquery.com/jquery-3.4.1.js"
+  integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU="
+  crossorigin="anonymous"></script>
+  <script>
+    window.sr = ScrollReveal();
+    sr.reveal('.navbar', {
+      duration: 2000,
+      origin:'bottom'
+    });
+    sr.reveal('.showcase-left', {
+      duration: 2000,
+      origin:'top',
+      distance:'300px'
+    });
+    sr.reveal('.showcase-right', {
+      duration: 2000,
+      origin:'right',
+      distance:'300px'
+    });
+    sr.reveal('.showcase-btn', {
+      duration: 2000,
+      delay: 2000,
+      origin:'bottom'
+    });
+    sr.reveal('#testimonial div', {
+      duration: 2000,
+      origin:'bottom'
+    });
+    sr.reveal('.info-left', {
+      duration: 2000,
+      origin:'left',
+      distance:'300px',
+      viewFactor: 0.2
+    });
+    sr.reveal('.info-right', {
+      duration: 2000,
+      origin:'right',
+      distance:'300px',
+      viewFactor: 0.2
+    });
+</script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
   </body>
 </html>
 
